// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render 1`] = `null`;

exports[`should render normally 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#AEAEB2",
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "paddingHorizontal": 15,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#FFFFFF",
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "bold",
        "textTransform": "uppercase",
      }
    }
  >
    TEXT
  </Text>
</View>
`;

exports[`should render with custom styles 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "paddingHorizontal": 15,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontSize": 16,
        "fontWeight": "bold",
        "textTransform": "uppercase",
      }
    }
  >
    TEXT
  </Text>
</View>
`;
